[tool.poetry]
name = "unseal-vault"
version = "0.1.0"
description = "Python helper for unseal `Vault.io <http://vaultproject.io/>`"
authors = ["Nicolas Ledez <github.public@ledez.net>"]
license = "AGPL"
readme = "README.md"
packages = [{include = "unseal_vault"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
hvac = "^2.0.0"
PyYAML = "^6.0"
PySocks = "^1.7.1"
python-consul = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-md = "^0.2.0"
pytest-emoji = "^0.2.0"
coveralls = "^3.3.1"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tox = "^4.2.6"
pytest-watch = "^4.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
